test/lit/pto/fusion_region_verify_missing_yield.pto
// RUN: not ptoas --pto-level=level3 --emit-pto-ir %s 2>&1 | FileCheck %s

module {
  func.func @fusion_region_missing_yield_invalid() {
    %0 = pto.fusion_region {
      %c0 = arith.constant 0 : index
    } : index
    return
  }
}

// CHECK: error: 'pto.fusion_region' op expects body to terminate with pto.yield
